grid gap bran and contacts fixed

--- a/src/styles/blocks/brand.scss
+++ b/src/styles/blocks/brand.scss
@@ -59,7 +59,7 @@
     }
 
     &__content {
-      gap: 32px;
+      gap: 100px;
     }
   }
 }
